Fixed alignment of summaries

--- a/static/main.css
+++ b/static/main.css
@@ -35,7 +35,7 @@ h4 {
 
 .transport_summary{
     padding-top: 10px;
-    margin-left: 120px;
+    margin-left: 270px;
     overflow: hidden;
 }
 
